Add crossorigin setting for site.webmanifest

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/evergreen-fav/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/evergreen-fav/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/evergreen-fav/favicon-16x16.png">
-  <link rel="manifest" href="./evergreen-fav/site.webmanifest">
+  <link rel="manifest" href="./evergreen-fav/site.webmanifest" crossorigin="use-credentials">
 
   <!-- -- fonts -- -->
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Work+Sans:wght@200;400&display=swap" rel="stylesheet">
