--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
   <!-- -- main styles -- -->
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -33,7 +32,7 @@
   </div>
 
   <div class="container">
-    <div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="assets/background/forest.jpg"></div>
+    <div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="assets/background/pexels-johannes-plenio-1423600.jpg"></div>
     <div class="body-header">
       <div class="text-container">
         <h1>Hi, I'm George.</h1>
@@ -111,9 +110,9 @@
     </div>
   </div>
 
-  <div class="footer">
+  <footer class="footer">
     <div class="footer-text">✌</div>
-  </div>
+  </footer>
 
 </body>
 </html>
